--- a/FarmSales/Views/web.config
+++ b/FarmSales/Views/web.config
@@ -16,7 +16,7 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
-        <add namespace="IzerSPA" />
+        <add namespace="FarmSalesSPA" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
