--- a/FarmSales/FarmSales.csproj
+++ b/FarmSales/FarmSales.csproj
@@ -123,18 +123,19 @@
     <Content Include="Layout\JS\sir-accordion.min.js" />
     <Content Include="Layout\JS\ui-bootstrap-tpls-2.5.0.min.js" />
     <Content Include="Layout\JS\velocity.min.js" />
-    <Content Include="SubPages\Entregadores.html" />
-    <Content Include="SubPages\Errors\404.html" />
     <Content Include="SubPages\Home.html" />
+    <Content Include="SubPages\Errors\404.html" />
+    <Content Include="SubPages\Detalhes.html" />
+    <Content Include="SubPages\Noticias.html" />
     <Content Include="SubPages\Images\icone.png" />
     <Content Include="SubPages\Images\splash.png" />
     <Content Include="SubPages\Login\login.controller.js" />
     <Content Include="SubPages\Login\login.view.html" />
-    <Content Include="SubPages\Metas.html" />
+    <Content Include="SubPages\Mercado.html" />
     <Content Include="SubPages\MeuPerfil.html" />
     <Content Include="SubPages\Partials\Footer.html" />
     <Content Include="SubPages\Partials\Header.html" />
-    <Content Include="SubPages\Realizar.html" />
+    <Content Include="SubPages\Investimentos.html" />
     <Content Include="SubPages\Register\register.controller.js" />
     <Content Include="SubPages\Register\register.view.html" />
     <Content Include="SubPages\TermosDeUso.html" />
